@@ -5,6 +5,8 @@ envlist = flake8
           py27-django1{7,8,9,10,11}
           py34-django17
           py3{4,5,6}-django1{8,9,10,11}
+          # py3{4,5,6}-django20
+          # py3{5,6,7}-django2{1,2}
 
 [flake8]
 max-line-length = 120
@@ -12,7 +14,9 @@ exclude = *.cfg,*.egg,*.ini,*.log,tests/*,*.txt,.tox,.venv,AUTHORS,build,ChangeL
 format = pylint
 
 [testenv]
-setenv = PRB_VERSION = 0.9.4
+# setenv = PBR_VERSION = 0.9.4
+passenv = PYTHONPATH
+usedevelop = true
 commands = py.test --basetemp={envtmpdir} {posargs}
 deps = pytest
        pytest-pythonpath
